# firefly

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  geometry.c  geometry.h  gpulib.c  gpulib.h  main.c  test.c
src/kernels/: camera-directions.cl  path-trace.cl  quaternion.cl
